--- a/sections/multi-column.liquid
+++ b/sections/multi-column.liquid
@@ -30,11 +30,11 @@
             {%- when 'item' -%}
               <div class="multi-column__item justify-{{ section.settings.text_alignment }} snap-start" style="--multi-column-item-column-count: span {{ 12.0 | divided_by: block.settings.column_size | round }}" {{ block.shopify_attributes }}>
                 {%- if block.settings.video != blank -%}
-                  <video-media autoplay style="--aspect-ratio: {{ block.settings.video.aspect_ratio }}">
+                  <video-media autoplay style="--aspect-ratio: {{ block.settings.video.aspect_ratio }}" class="tw-rounded-xl tw-overflow-hidden">
                     {{ block.settings.video | video_tag: playsinline: true, muted: true, loop: true, preload: 'metadata', class: 'rounded' }}
                   </video-media>
                 {%- elsif block.settings.image != blank -%}
-                <a href="{{ block.settings.link_url }}" class="link">
+                <a href="{{ block.settings.link_url }}" class="tw-rounded-xl tw-overflow-hidden">
                   {%- capture sizes -%}(max-width: 699px) calc(73vw - 40px), (max-width: 999px) calc(38vw - 64px), calc(min({{ settings.page_width }}px, 100vw) / {{ block.settings.column_size }}){%- endcapture -%}
                   {{- block.settings.image | image_url: width: block.settings.image.width | image_tag: loading: 'lazy', sizes: sizes, widths: '300,400,500,600,800,1000,1200,1400,1600,1800', class: 'rounded' -}}
                 </a>
